--- a/f-tep-portal/src/main/resources/app/styles/less/account/account.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/account/account.less
@@ -13,7 +13,7 @@
         }
     }
     #account-panel, #statistics-panel, #info-panel {
-        background-color: @light-gray;
+        background-color: @gray;
         height: 100%;
         overflow-y: auto;
         padding: 0.5rem;
