--- a/f-tep-portal/src/main/resources/app/styles/less/admin/admin.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/admin/admin.less
@@ -44,7 +44,7 @@
             }
         }
         #role-container {
-            background-color: @light-gray;
+            background-color: @gray;
         }
     }
 }
